syntax = "proto3";
 
option java_multiple_files = true;
option java_package = "com.study.pb";
option java_outer_classname = "HelloWorld";
option objc_class_prefix = "";
 
package pb;
 
service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}
 
message HelloRequest {
    string name = 1;
}
 
message HelloReply {
    string message = 1;
}
